Import of MOLT/Tie-Assert-0.1_01 from CPAN.
gitpan-cpan-distribution: Tie-Assert
gitpan-cpan-version:      0.1_01
gitpan-cpan-path:         MOLT/Tie-Assert-0.1_01.tar.gz
gitpan-cpan-author:       MOLT
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: Tie-Assert
-version: 0.1
+version: 0.1_01
 author: Paul Golds <Paul.Golds@GMail.com>
 abstract: Enforces restrictions on variables' contents
 license: perl
@@ -9,11 +9,11 @@ build_requires:
 provides:
   Tie::Assert:
     file: lib/Tie/Assert.pm
-    version: 0.1
+    version: 0.1_01
   Tie::Assert::CheckFactory:
     file: lib/Tie/Assert/CheckFactory.pm
-    version: 0.1
+    version: 0.101
   Tie::Assert::Scalar:
     file: lib/Tie/Assert/Scalar.pm
-    version: 0.1
+    version: 0.1_01
 generated_by: Module::Build version 0.25
