Import of MOLT/Tie-Assert-0.13 from CPAN.
gitpan-cpan-distribution: Tie-Assert
gitpan-cpan-version:      0.13
gitpan-cpan-path:         MOLT/Tie-Assert-0.13.tar.gz
gitpan-cpan-author:       MOLT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,23 @@
 --- #YAML:1.0
 name: Tie-Assert
-version: 0.12
+version: 0.13
 author: Paul Golds <Paul.Golds@GMail.com>
 abstract: Enforces restrictions on variables' contents
 license: perl
 requires:
-  'B::': 1.02
+  B: 1.02
   B::Flags: 0.01
+  Params::Validate: 0.74
 build_requires:
   Test::More: 0.47
 provides:
   Tie::Assert:
     file: lib/Tie/Assert.pm
-    version: 0.12
+    version: 0.13
   Tie::Assert::CheckFactory:
     file: lib/Tie/Assert/CheckFactory.pm
-    version: 0.12
+    version: 0.13
   Tie::Assert::Scalar:
     file: lib/Tie/Assert/Scalar.pm
-    version: 0.12
+    version: 0.13
 generated_by: Module::Build version 0.25
